--- a/src/stylesheets/components/_list-view.scss
+++ b/src/stylesheets/components/_list-view.scss
@@ -6,6 +6,7 @@
   flex: 1 1 auto;
   display: flex;
   flex-direction: column;
+  padding: 0 $space-min;
 
   .list-head {
     box-sizing: content-box;
